--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,8 @@
 <resources>
     <string name="app_name">File Scan</string>
     <string name="start_scan">Start Scan</string>
+
+    <!-- Toast messages -->
+    <string name="scan_started">Scan Started</string>
+    <string name="scan_completed">Scan Completed</string>
 </resources>
