--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,9 @@
 <resources>
     <string name="app_name">File Scan</string>
+
+    <!-- Buttons -->
     <string name="start_scan">Start Scan</string>
+    <string name="stop_scan">Stop Scan</string>
 
     <!-- Toast messages -->
     <string name="scan_started">Scan Started</string>
