Add largest file

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
 
     <string name="scan_completed">Scan Completed!</string>
     <string name="scanning_files">Scanning files…</string>
+    <string name="largest_file">Largest File</string>
 </resources>
